# Connectors

./: .gitignore  Connectors.slnx  README.md  common_connectors.props
ActivFinancial/: ActivFinancial.csproj  ActivFinancialEnums.cs  ActivFinancialExtensions.cs  ActivFinancialMessageAdapter.cs  ActivFinancialMessageAdapter_MarketData.cs  ActivFinancialMessageAdapter_Settings.cs  README.md
Aerodrome/: AerodromeMessageAdapter.cs  AerodromeMessageAdapter_Connection.cs  AerodromeMessageAdapter_MarketData.cs  AerodromeMessageAdapter_Settings.cs  AerodromeMessageAdapter_Transaction.cs  README.md
Aevo/: AevoMessageAdapter.cs  AevoMessageAdapter_Connection.cs  AevoMessageAdapter_MarketData.cs  AevoMessageAdapter_Settings.cs  AevoMessageAdapter_Transaction.cs  AevoOrderCondition.cs  README.md
AlgoSeek/: AlgoSeek.csproj  AlgoSeekEnums.cs  AlgoSeekMessageAdapter.cs  AlgoSeekMessageAdapter_MarketData.cs  AlgoSeekMessageAdapter_Settings.cs  Extensions.cs  README.md
AliceBlue/: AliceBlue.csproj  AliceBlueMessageAdapter.cs  AliceBlueMessageAdapter_MarketData.cs  AliceBlueMessageAdapter_Settings.cs  AliceBlueMessageAdapter_Transaction.cs  AliceBlueOrderCondition.cs  README.md
Alor/: Alor.csproj  AlorMessageAdapter.cs  AlorMessageAdapter_MarketData.cs  AlorMessageAdapter_Settings.cs  AlorMessageAdapter_Transaction.cs  AlorOrderCondition.cs  README.md
AlorHistory/: AlorHistory.csproj  AlorHistoryMessageAdapter.cs  AlorHistoryMessageAdapter_MarketData.cs  AlorHistoryMessageAdapter_Settings.cs  README.md
Alpaca/: Alpaca.csproj  AlpacaExtensions.cs  AlpacaMessageAdapter.cs  AlpacaMessageAdapter_MarketData.cs  AlpacaMessageAdapter_Settings.cs  AlpacaMessageAdapter_Transaction.cs  AlpacaOrderCondition.cs  README.md
AlphaVantage/: AlphaVantage.csproj  AlphaVantageMessageAdapter.cs  AlphaVantageMessageAdapter_MarketData.cs  AlphaVantageMessageAdapter_Settings.cs  Extensions.cs  README.md
Amberdata/: AmberdataEnums.cs  AmberdataExtensions.cs  AmberdataMessageAdapter.cs  AmberdataMessageAdapter_Connection.cs  AmberdataMessageAdapter_MarketData.cs  AmberdataMessageAdapter_Settings.cs  README.md
Anchorage/: AnchorageEnums.cs  AnchorageMessageAdapter.cs  AnchorageMessageAdapter_Connection.cs  AnchorageMessageAdapter_Conversions.cs  AnchorageMessageAdapter_MarketData.cs  AnchorageMessageAdapter_PrivateData.cs  AnchorageMessageAdapter_Settings.cs  AnchorageMessageAdapter_Transaction.cs  (+2 more)
CTP/NativeBridge/: CMakeLists.txt  ctp_bridge.cpp  ctp_bridge.h
Xtp/NativeBridge/: CMakeLists.txt  xtp_bridge.cpp  xtp_bridge.h
(+4528 files in other folders)
